syntax = "proto3";

option java_multiple_files = true;
option java_package = "patient";


service PatientService{
  rpc GetPatientById(PatientRequest) returns (PatientResponse);
  rpc DoesPatientExists(PatientRequest) returns (PatientExistsResponse);
}

message PatientExistsResponse{
  bool patientExists = 1;
}

message PatientRequest {
  string patientId = 1;
}

message PatientResponse {
  string patientId = 1;
  string name = 2;
  string email = 3;
  string gender = 4;
  string dateOfBirth = 5;
}